# eth-sparse-mpt

./: .gitignore  Cargo.toml  README.md  proofs.json
benches/: trie_insert_bench.rs  trie_nodes_benches.rs
proptest-regressions/neo_sparse_mpt/: trie_tests.txt
proptest-regressions/sparse_mpt/: trie_tests.txt
src/: lib.rs  utils.rs
src/neo_sparse_mpt/: mod.rs  sparse_trie_nodes.rs  trie_tests.rs  utils.rs
src/reth_sparse_trie/: change_set.rs  hash.rs  internal.rs  local_cache.rs  mod.rs  shared_cache.rs
src/reth_sparse_trie/trie_fetcher/: mod.rs  toy_trie_tests.rs
src/sparse_mpt/: basic_tests.rs  fixed_trie.rs  hashing.rs  mod.rs  sparse_tests.rs  sparse_trie_nodes.rs  trie_tests.rs  utils.rs
src/sparse_mpt/diff_trie/: mod.rs  nodes.rs  tests.rs
src/sparse_mpt/ptr_trie/: diff_trie_tests.rs  fixed_trie.rs  fixed_trie_tests.rs  mod.rs
test_data/: changeset.json  failure_case_0.json  mutliproof_1.json
