[package]
name = "eth-sparse-mpt"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
eyre = "0.6.12"
hash-db = "0.15.2"
thiserror = "1.0.61"
triehash = "0.8.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
proptest = "1.5.0"


#alloy-trie = { git = "https://github.com/alloy-rs/trie", rev = "f530dfa22a0233968483ebeefb6c1d73f370456b"}

reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-db-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-libmdbx = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-trie-parallel = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6", features = ["test-utils"] }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }

# revm
revm = { version = "14.0.0", features = [
    "std",
    "secp256k1",
    "blst",
], default-features = false }
revm-inspectors = "0.6"
revm-primitives = { version = "9.0.0", features = [
    "std",
], default-features = false }

# eth
alloy-chains = "0.1.18"
alloy-dyn-abi = "0.8.0"
alloy-primitives = { version = "0.8.0", default-features = false }
alloy-rlp = "0.3.4"
alloy-sol-types = "0.8.0"
alloy-trie = { version = "0.5", default-features = false }

alloy-consensus = { version = "0.3.0", default-features = false }
alloy-eips = { version = "0.3.0", default-features = false }
alloy-genesis = { version = "0.3.0", default-features = false }
alloy-json-rpc = { version = "0.3.0", default-features = false }
alloy-network = { version = "0.3.0", default-features = false }
alloy-node-bindings = { version = "0.3.0", default-features = false }
alloy-provider = { version = "0.3.0", features = [
    "reqwest",
], default-features = false }
alloy-pubsub = { version = "0.3.0", default-features = false }
alloy-rpc-client = { version = "0.3.0", default-features = false }
alloy-rpc-types = { version = "0.3.0", features = [
    "eth",
], default-features = false }
alloy-rpc-types-admin = { version = "0.3.0", default-features = false }
alloy-rpc-types-anvil = { version = "0.3.0", default-features = false }
alloy-rpc-types-beacon = { version = "0.3.0", default-features = false }
alloy-rpc-types-engine = { version = "0.3.0", default-features = false }
alloy-rpc-types-eth = { version = "0.3.0", default-features = false }
alloy-rpc-types-mev = { version = "0.3.0", default-features = false }
alloy-rpc-types-trace = { version = "0.3.0", default-features = false }
alloy-rpc-types-txpool = { version = "0.3.0", default-features = false }
alloy-serde = { version = "0.3.0", default-features = false }
alloy-signer = { version = "0.3.0", default-features = false }
alloy-signer-local = { version = "0.3.0", default-features = false }
alloy-transport = { version = "0.3.0" }
alloy-transport-http = { version = "0.3.0", features = [
    "reqwest-rustls-tls",
], default-features = false }
alloy-transport-ipc = { version = "0.3.0", default-features = false }
alloy-transport-ws = { version = "0.3.0", default-features = false }
serde_with = "3.9.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "trie_insert_bench"
harness = false

[[bench]]
name = "trie_nodes_benches"
harness = false