[package]
name = "eth-sparse-mpt"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.61"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = "3.9.0"
rustc-hash = "2.0.0"
rayon = "1.10.0"
smallvec = "1.13.2"

# reth
reth-db-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-execution-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }

# revm
revm = { version = "14.0.0", features = [
    "std",
    "secp256k1",
    "blst",
], default-features = false }
revm-primitives = { version = "9.0.0", features = [
    "std",
], default-features = false }

# alloy
alloy-primitives = { version = "0.8.0", default-features = false, features = ["asm-keccak"] }
alloy-rlp = "0.3.4"
alloy-trie = { version = "0.5", default-features = false }

# test only dependencies but included here to be accessible from benches/
hash-db = "0.15.2"
triehash = "0.8.4"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
eyre = "0.6.12"
rand = { version = "0.8.5", features = ["small_rng"] }
#proptest = "1.5.0"

[[bench]]
name = "trie_insert_bench"
harness = false

[[bench]]
name = "trie_nodes_benches"
harness = false

